--- a/site/main.css
+++ b/site/main.css
@@ -2,13 +2,13 @@
 	margin: 20px 0;
 	height: 0;
 	border: none;
-	border-top: 6px solid darkgreen;
+	border-top: 6px solid red;
 	border-radius: 50px;
 }
 
 .round-img {
 	border-radius: 360px;
-    border: 6px solid darkgreen;
+    border: 6px solid red;
     box-shadow: 0 0 75px black;
 }
 
@@ -28,8 +28,8 @@ body {
 .div-con {
 	margin: 0 auto;
 	width: 15%;
-	border-left: 5px solid darkgreen;
-	border-right: 5px solid darkgreen;
+	border-left: 5px solid red;
+	border-right: 5px solid red;
 	border-radius: 4px;
 }
 
