--- a/site/main.css
+++ b/site/main.css
@@ -2,20 +2,20 @@
 	margin: 20px 0;
 	height: 0;
 	border: none;
-	border-top: 6px solid red;
+	border-top: 6px solid skyblue;
 	border-radius: 50px;
 }
 .thin-line {
 	margin: 20px 0;
 	height: 0;
 	border: none;
-	border-top: 1px solid red;
+	border-top: 1px solid skyblue;
 	border-radius: 50px;
 }
 
 .round-img {
 	border-radius: 360px;
-    border: 6px solid red;
+    border: 6px solid skyblue;
     box-shadow: 0 0 75px black;
 }
 
@@ -23,7 +23,7 @@
 	background: url(bg.gif) no-repeat;
 	background-size: cover;
 	padding:0;
-    margin:0;
+  margin:0;
 }
 
 body {
@@ -33,7 +33,7 @@ body {
 }
 
 .icon {
-	border: 2px solid red;
+	border: 2px solid skyblue;
 	border-radius: 30px;
 }
 
